<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>srf_laser_odometry</name>
  <version>1.0.0</version>
  <description>
    Estimation of 2D odometry based on planar laser scans. Useful for mobile robots with innacurate base odometry.
    For full description of the algorithm, please refer to:
    Planar Odometry from a Radial Laser Scanner. A Range Flow-based Approach. ICRA 2016
    Available at: http://mapir.isa.uma.es/mapirwebsite/index.php/mapir-downloads/papers/217
  </description>

  <maintainer email="jgmonroy@uma.es">Javier G. Monroy</maintainer>
  <author email="marianojt@uma.es"> Mariano Jaimez</author>
  <author email="jgmonroy@uma.es"> Javier G. Monroy</author>
  <license>LGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>Eigen3</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
